--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
+   
     <!------------------------- BOOSTRAP CSS & JS FILE CDN -------------------------------->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -129,11 +126,11 @@
         <nav>
             <!-- menu -->
 
-            <a class="btn " data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+            <a class="btn " data-bs-toggle="offcanvas"  href="#offcanvasExample" role="button"
                 aria-controls="offcanvasExample">
                 <i class="bi bi-list"></i>
             </a>
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasExample"
                 aria-labelledby="offcanvasExampleLabel">
                 <div class="offcanvas-header">
                     <h3 class="offcanvas-title" id="offcanvasExampleLabel">Menu</h3>
