--- a/index.html
+++ b/index.html
@@ -103,17 +103,22 @@
                                     style="font-size: 15px; font-weight: bolder; color: white;">(090)123-4567</span></a>
                         </li>
                         <li class="nav-item ic-ho" style="text-align: center; line-height: 25px;">
-                            <a class="nav-link  ms-5" href="#"><i class="bi bi-heart"></i><br><span>Wish
-                                    lists</span></a>
+                            <a class="nav-link  ms-5" href="#">
+                                <i class="bi bi-heart"></i><br>
+                                <span>Wish lists</span>
+                            </a>
                         </li>
 
                         <li class="nav-item ic-ho" style="text-align: center; line-height: 24px;">
                             <a class="nav-link   ms-4" href="#" role="button">
-                                <i class="bi bi-person-circle"></i><br><span>Sign in</span>
+                                <i class="bi bi-person-circle"></i><br>
+                                <span>Sign in</span>
                             </a>
                         </li>
                         <li class="nav-item ic-ho" style="text-align: center; line-height: 25px;">
-                            <a class="nav-link  ms-4" href="#"><i class="bi bi-cart3"></i><br><span>Cart</span></a>
+                            <a class="nav-link  ms-4" href="#">
+                                <i class="bi bi-cart3"></i><br>
+                                <span>Cart</span></a>
                         </li>
                     </ul>
 
