--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
+
     <!------------------------- BOOSTRAP CSS & JS FILE CDN -------------------------------->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -131,7 +131,7 @@
         <nav>
             <!-- menu -->
 
-            <a class="btn " data-bs-toggle="offcanvas"  href="#offcanvasExample" role="button"
+            <a class="btn " data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                 aria-controls="offcanvasExample">
                 <i class="bi bi-list"></i>
             </a>
@@ -329,20 +329,20 @@
                             <img src="./img/product-loa-1_870x-removebg-preview.png" alt="">
                             <p>(Product 14)Sample-Computers & Accessories For Sale-Black</p>
                             <p><strike>$99.00</strike> From $49.00</p>
-                            <ul>
-                                <li>
-                                    <div class="colo"></div>
-                                </li>
-                                <li>
-                                    <div class="colo" style="background-color: #f5f5dc;"></div>
-                                </li>
-                                <li>
-                                    <div class="colo" style="background-color: #708090;"></div>
-                                </li>
-                                <li>
-                                    <div class="colo" style="background-color: #f4a460;"></div>
-                                </li>
-                            </ul>
+                                <ul>
+                                    <li>
+                                        <div class="colo"></div>
+                                    </li>
+                                    <li>
+                                        <div class="colo" style="background-color: #f5f5dc;"></div>
+                                    </li>
+                                    <li>
+                                        <div class="colo" style="background-color: #708090;"></div>
+                                    </li>
+                                    <li>
+                                        <div class="colo" style="background-color: #f4a460;"></div>
+                                    </li>
+                                </ul>
                             <div class="d-grid gap-2">
                                 <button class="btn  border border-dark rounded-pill " type="button" id="btn1">Choose
                                     Option</button>
@@ -580,23 +580,23 @@
                         <center>
                             <ul class="d-flex  ">
                                 <li><a href=""> <img src="./img/mobile-phones.png" alt=""> <br><br>
-                                    <label>Mobile Phones</label></a>
+                                        <label>Mobile Phones</label></a>
                                 </li>
                                 <li><a href=""> <img src="./img/laptops-tablets.png" alt=""><br><br>
-                                    <label> Laptop & Tablets</label></a>
+                                        <label> Laptop & Tablets</label></a>
                                 </li>
                                 <li> <a href=""><img src="./img/televisions.png" alt=""><br><br>
-                                    <label>Television</label></a>
+                                        <label>Television</label></a>
                                 </li>
 
                                 <li><a href=""><img src="./img/pcs-accessories.png" alt=""> <br><br>
-                                    <label>PCs & Accessories</label></a>
+                                        <label>PCs & Accessories</label></a>
                                 </li>
                                 <li> <a href=""><img src="./img/audio-video.png" alt=""> <br><br>
-                                    <label> Audio & Video</label></a>
+                                        <label> Audio & Video</label></a>
                                 </li>
                                 <li> <a href=""><img src="./img/gaming-accessories.png" alt=""> <br><br>
-                                    <label>Gameing & Accessories</label></a>
+                                        <label>Gameing & Accessories</label></a>
                                 </li>
                             </ul>
                         </center>
@@ -609,26 +609,26 @@
                         <center>
                             <ul id="prod">
                                 <li> <a href=""><img src="./img/home-appliances.png" alt=""><br><br>
-                                    <label> Home Appliance</label></a>
+                                        <label> Home Appliance</label></a>
                                 </li>
                                 <li> <a href=""><img src="./img/kitchen-appliances.png" alt=""><br><br>
-                                    <label>Kitchen Appliance </label></a>
+                                        <label>Kitchen Appliance </label></a>
 
                                 </li>
                                 <li><a href=""> <img src="./img/cameras.png" alt=""><br><br>
-                                    <label>Cameras </label></a>
+                                        <label>Cameras </label></a>
 
                                 </li>
                                 <li id="prod2"> <a href=""><img src="./img/consumables.png" alt=""><br><br>
-                                    <label>Consumables </label></a>
+                                        <label>Consumables </label></a>
 
                                 </li>
                                 <li id="prod2"><a href=""><img src="./img/smart-homes.png" alt=""><br><br>
-                                    <label>Smart Homes </label></a>
+                                        <label>Smart Homes </label></a>
 
                                 </li>
                                 <li id="prod2"><a href=""><img src="./img/accessories.png" alt=""> <br><br>
-                                    <label>Accessories </label></a>
+                                        <label>Accessories </label></a>
 
                                 </li>
                             </ul>
@@ -1247,14 +1247,14 @@
                             <li>Store Locations</li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3" id="list3">
                         <img src="./img/logo-footer_dae8179f-eb19-4161-a643-b1f82b12e108_200x.png" alt="" />
                         <ul>
-                            <li><i class="bi bi-geo-alt-fill"></i> B-201 Ganesh Shopan
-                                New ranip, Ahemdabad
+                            <li><i class="bi bi-geo-alt-fill"></i>&nbsp; <p style="color: #505050;"> B-201 Ganesh Shopan
+                                New ranip, Ahemdabad</p>
                             </li>
-                            <li><i class="bi bi-telephone-fill"></i> Call us +9824699398</li>
-                            <li><i class="bi bi-envelope"></i> f388krish@gmail.com</li>
+                            <li><i class="bi bi-telephone-fill"></i>&nbsp; <p style="color: #505050;"> Call us +9824699398</p></li>
+                            <li><i class="bi bi-envelope"></i> &nbsp; <p style="color: #505050;"> f388krish@gmail.com</p></li>
                         </ul>
                         <ul id="icons">
                             <li><i class="bi bi-facebook"></i></li>
@@ -1267,13 +1267,15 @@
                 </div>
                 <div class="row ">
                     <div class="col-md-12 " id="limg">
-                        <img src="./img/trust_551fa8e0-5f24-4fbc-bf22-74c01b859a01.png" alt=""> 
+                        <img src="./img/trust_551fa8e0-5f24-4fbc-bf22-74c01b859a01.png" alt="">
                     </div>
-                
+
                 </div>
 
             </div>
-                <center>  <h6 id="copy"> &copy;2024 Krish Kaila | All Rights Reserved  </h6></center>
+            <center>
+                <h6 id="copy"> &copy;2024 Krish Kaila | All Rights Reserved </h6>
+            </center>
 
         </section>
     </footer>
